# Practical-25-winter

./: .gitignore  analysis.ipynb  config.py  load_database.py  notebook.ipynb  prediction.csv  pyproject.toml  station.csv  temperature_dispersion.ipynb  temperature_dispersion.py
Output/: anomaly.csv
dump/: china_data_insert.sql
